// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxCard customize 1`] = `
<div>
  <div
    class="card bg-primary fg-warning bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxCard component 1`] = `
<div>
  <div
    class="card"
  >
    Test
  </div>
</div>
`;
